--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <nav class="navbar navbar-expand-lg navbar-light py-3" aria-label="Main navigation">
             <div class="container">
                 <a class="navbar-brand text-dark" href="index.html">
-                     <b><i class="fa fa-comments-o"></i>WomenInTech<span class="p-3 mb-2 bg-primary text-white">.me<span></b></a>
+                     <b><i class="fa fa-comments-o"></i>WomenInTech<span class="p-3 mb-2 bg-primary text-white rounded">.me<span></b></a>
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fas fa-bars fa-lg"></i>
@@ -144,7 +144,30 @@
                     </div>
                 </div>
             </div>
+	        <!-- Features -->
+        <div id="features" class="container">
+            <div class="row justify-content-lg-between align-items-lg-center py-4 py-lg-5">
+                <div class="col-lg-5 mb-4 mb-lg-0">
+                    <h2>A new way</h2>
+                    <hr class="sep border-primary ml-0 mb-3 text-left">
+                    <p>Mentoring programs in the workplace is broken.  Find real people to speak to over webcam or in person that are happy to go on the journey of self or technical improvement with you for a minimum of 12 weeks</p>
+                </div>
+                <div class="col-lg-6">
+                    <img src="images/calendar.png" class="img-fluid img-thumbnail" alt="Weekly calendar">
+                </div>
+            </div>
+            <div class="row justify-content-lg-between align-items-lg-center py-4 py-lg-5">
+                <div class="col-lg-5 order-lg-2 mb-4 mb-lg-0">
+                    <h2>Recommended Matches</h2>
+                    <hr class="sep border-primary ml-0 mb-3 text-left">
+                    <p>In order to help reduce implicit bias, we provide you with a maximum of 3 people.</p>
+                </div>
+                <div class="col-lg-6 order-lg-1">
+                    <img src="images/random-pencil.gif" class="img-fluid img-thumbnail" alt="Matching algorithm image">
+                </div>
 
+            </div>
+        </div>
             <!-- Call to action -->
             <hr class="sep border-primary">
             <div class="container py-5">
@@ -214,31 +237,6 @@
 
         </div><!-- end bg-skew -->
 
-        <!-- Features -->
-        <div id="features" class="container">
-            <div class="row justify-content-lg-between align-items-lg-center py-4 py-lg-5">
-                <div class="col-lg-5 mb-4 mb-lg-0">
-                    <h2>A new way</h2>
-                    <hr class="sep border-primary ml-0 mb-3 text-left">
-                    <p>Mentoring programs in the workplace is broken.  Find real people to speak to over webcam or in person that are happy to go on the journey of self or technical improvement with you for a minimum of 12 weeks</p>
-                </div>
-                <div class="col-lg-6">
-                    <img src="images/calendar.jpg" class="img-fluid img-thumbnail" alt="Weekly calendar">
-                </div>
-            </div>
-            <div class="row justify-content-lg-between align-items-lg-center py-4 py-lg-5">
-                <div class="col-lg-5 order-lg-2 mb-4 mb-lg-0">
-                    <h2>Recommended Matches</h2>
-                    <hr class="sep border-primary ml-0 mb-3 text-left">
-                    <p>In order to help reduce implicit bias, we provide you with a maximum of 3 people.</p>
-                </div>
-                <div class="col-lg-6 order-lg-1">
-                    <img src="images/random-pencil.gif" class="img-fluid img-thumbnail" alt="Matching algorithm image">
-                </div>
-
-            </div>
-        </div>
-
         <div class="bg-skew bg-skew-light">
 
             <!-- Accordion -->
@@ -283,6 +281,30 @@
                                     </div>
                                 </div>
                             </div>
+			   <div class="card shadow mb-2">
+                                <div class="card-header" id="headingThree">
+                                    <a class="collapsed" href="#collapseThree" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                        <h3 class="card-title">Can I find out more about the mentors/mentees easily without being too committed? <i class="fas fa-angle-down float-right rotate-icon"></i></h3>
+                                    </a>
+                                </div>
+                                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionQuestions">
+                                    <div class="card-body">
+                                        <p>Each person on the site has made a short video and you can watch this for up to three matches before selecting one.</p>
+                                    </div>
+                                </div>
+                            </div>
+			  <div class="card shadow mb-2">
+                                <div class="card-header" id="headingThree">
+                                    <a class="collapsed" href="#collapseThree" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                        <h3 class="card-title">What happens when I submit my details? <i class="fas fa-angle-down float-right rotate-icon"></i></h3>
+                                    </a>
+                                </div>
+                                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionQuestions">
+                                    <div class="card-body">
+                                        <p>You details will be entered into the Mentor Matching database and we will try to find someone suitable based on the information you have provided </p>
+                                    </div>
+                                </div>
+                            </div> 
                         </div>
                     </div>
                 </div>
@@ -308,7 +330,7 @@
             <div class="row justify-content-md-between">
                 <div class="col-sm-12 col-md-4 mb-4">
                     <h3 class="h5 mb-3">Company</h3>
-                    <p>WomenInTech.me is a mentor matching service to help connect women with people who can guide them at all stages in their careers</p>
+                    <p>WomenInTech.me is a mentor matching service to help connect women with people who can guide them at all stages in their careers.</p>
                 </div>
                 <div class="col-4 col-md-2 mb-4">
                     <h3 class="h5 mb-3">About</h3>
