--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
     <span class="w3-jumbo w3-hide-small">Join a community that cares.</span><br>
     <span class="w3-xxlarge w3-hide-large w3-hide-medium">Join a community that cares</span><br>
     <span class="w3-large">Working together, we can break down barriers and make a difference.</span>
-    <p><a href="#connect" class="w3-button w3-red w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Coming Soon!</a></p>
+    <p><a href="#connect" class="w3-button w3-red w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Tell us what would make you join!</a></p>
   </div> 
   <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
